@@ -1,3 +1,14 @@
+2015-04-02 Riccardo Mottola <rm@gnu.org>
+
+	* GRDrawableObject.h
+	* GRDrawableObject.m
+	Provide allocEditor to get object editor and init using it.
+	That way subclasses can init with super and get the correct editor.
+
+	* GRBox.m
+	* GRImage.m
+	Use the editor inited in super.
+
 2015-03-31 Riccardo Mottola <rm@gnu.org>
 
 	* GRDocView.m
